tests/baselines/reference/ES5For-ofTypeCheck14.errors.txt
ES5For-ofTypeCheck14.ts(2,17): error TS2461: Type 'Set<number>' is not an array type.


==== ES5For-ofTypeCheck14.ts (1 errors) ====
    var union: string | Set<number>
    for (const e of union) { }
                    ~~~~~
!!! error TS2461: Type 'Set<number>' is not an array type.